[gd_scene load_steps=6 format=3 uid="uid://s0blay2xi65f"]

[ext_resource type="PackedScene" uid="uid://beuy7po6dtwkn" path="res://scenes/GUI/utils/gui_overlay_background.tscn" id="1_f382j"]
[ext_resource type="Script" uid="uid://d1hgyvoydof4g" path="res://scenes/GUI/main_game/tooltip_view/gui_tooltip_view_main.gd" id="1_s6y4d"]
[ext_resource type="Texture2D" uid="uid://b0nsc2v1cdqqd" path="res://resources/sprites/GUI/shared/panel_background_simple.png" id="2_s6y4d"]
[ext_resource type="Texture2D" uid="uid://b4wijuwglcpg0" path="res://resources/sprites/GUI/shared/border3.png" id="3_0ihx5"]
[ext_resource type="PackedScene" uid="uid://bgeepmq2eiey4" path="res://scenes/GUI/controls/buttons/gui_rich_text_button.tscn" id="5_a4wsu"]

[node name="GUITooltipViewMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s6y4d")

[node name="GUIOverlayBackground" parent="." instance=ExtResource("1_f382j")]
layout_mode = 1

[node name="MainPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(280, 140)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.0
offset_top = 6.0
offset_right = 110.0
offset_bottom = 134.0
grow_horizontal = 2

[node name="Background" type="NinePatchRect" parent="MainPanel"]
self_modulate = Color(0.364706, 0.172549, 0.156863, 1)
layout_mode = 2
texture = ExtResource("2_s6y4d")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Border" type="NinePatchRect" parent="MainPanel"]
self_modulate = Color(0.0745098, 0.0745098, 0.0745098, 1)
layout_mode = 2
texture = ExtResource("3_0ihx5")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Titles" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TitleLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/Titles"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HUD"
text = "Info"
horizontal_alignment = 1

[node name="SubTitleLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/Titles"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HUD_small"
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
horizontal_alignment = 1

[node name="TooltipContainer" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="BackButton" parent="." instance=ExtResource("5_a4wsu")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -22.0
offset_right = 15.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
localization_text_key = "BACK"
